fix: table overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -278,6 +278,10 @@
   }
 }
 
+.scroll {
+  overflow: scroll;
+}
+
 .full-width {
   margin: 20px 0 20px -50%;
   overflow: scroll;
