--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -1,6 +1,7 @@
 
 table {
   margin-bottom: 16px;
+  overflow: scroll;
 }
 
 table, th, td {
